<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/gender_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/activity_customer_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/activity_customer_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/my_account_selector"
                        android:checked="true"
                        android:paddingStart="5dp"
                        android:paddingLeft="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/male"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/activity_customer_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:button="@drawable/my_account_selector"
                        android:checked="false"
                        android:paddingStart="5dp"
                        android:paddingLeft="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/female"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/text_Username"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_user_name" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_firstName"
                    style="@style/BlackEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_first_name" />

                <EditText
                    android:id="@+id/text_lastName"
                    style="@style/BlackEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_last_name" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_days"
                    style="@style/BlackEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/dropdown_spinner"
                    android:drawableRight="@drawable/dropdown_spinner"
                    android:ellipsize="end"
                    android:hint="@string/hint_day" />


                <TextView
                    android:id="@+id/text_month"
                    style="@style/BlackEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/dropdown_spinner"
                    android:drawableRight="@drawable/dropdown_spinner"
                    android:ellipsize="end"
                    android:hint="@string/hint_month" />


                <TextView
                    android:id="@+id/text_year"
                    style="@style/BlackEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/dropdown_spinner"
                    android:drawableRight="@drawable/dropdown_spinner"
                    android:ellipsize="end"
                    android:hint="@string/hint_year" />
            </LinearLayout>


            <EditText
                android:id="@+id/text_email"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:enabled="false"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/text_company"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_company" />

            <EditText
                android:id="@+id/text_streetAddress"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_street_address" />

            <EditText
                android:id="@+id/text_streetAddress2"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_street_address_2" />

            <EditText
                android:id="@+id/text_zipPostalCode"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_zip_code" />

            <EditText
                android:id="@+id/text_city"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_city" />


            <EditText
                android:id="@+id/text_county"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_county" />

            <EditText
                android:id="@+id/text_country"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_country" />

            <EditText
                android:id="@+id/text_stateProvinceId"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_state" />

            <EditText
                android:id="@+id/text_phone"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/text_fax"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_fax" />

            <EditText
                android:id="@+id/text_signature"
                style="@style/BlackEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_signature" />


            <LinearLayout
                android:id="@+id/subscription_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/newsletter_subscription"
                    android:textColor="@color/light_grey"
                    android:textSize="16sp" />


                <CheckBox
                    android:id="@+id/activity_customer_subscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:button="@drawable/my_account_selector"
                    android:checked="true"
                    android:orientation="horizontal"
                    android:textColor="@color/light_grey" />

            </LinearLayout>

            <Button
                android:id="@+id/activity_customer_submit_btn"
                style="@style/AppTheme.BlackButton"
                android:text="@string/update" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/review_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTransparent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.growonline.gomobishop.control.AVLoadingIndicatorView
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/colorAccent"
            app:indicatorName="BallPulseIndicator" />
    </LinearLayout>

</RelativeLayout>


