<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thankyou"
    tools:context="com.growonline.gomobishop.ThankYouActivity">


    <ImageView
        android:id="@+id/img_shopping_thanks"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:contentDescription="@string/image"
        android:src="@drawable/shopping_bags" />

    <TextView
        android:id="@+id/lbl_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ok"
        android:layout_margin="16dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingExtra="6dp"
        android:text="@string/thankyou_string"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/AppTheme.BlackButton"
        android:layout_alignParentBottom="true"
        android:text="@string/okay" />

</RelativeLayout>

